# MS_lesion_visualiser

./: CMakeLists.txt  README.md  pyproject.toml
LoadMSLesionData/: CMakeLists.txt  LoadMSLesionData.py
LoadMSLesionData/Resources/UI/: LoadMSLesionData.ui
Main/: CMakeLists.txt  Main.py
Main/Resources/UI/: Main.ui
